css: fix aspect ratio issues on mobile

--- a/content/media/css/oasis.3.menu.less
+++ b/content/media/css/oasis.3.menu.less
@@ -25,10 +25,10 @@ nav {
             img {
                 position: absolute;
                 top: 0;
-                bottom: 0;
                 right: 0;
                 left: 0;
                 max-width: 100%;
+                height: auto;
                 z-index: 4;
             }
             &.active img {
